--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "update" : "npx npm-check-updates -u && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aymeric Barakat",
@@ -16,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mongoose-unique-validator": "^3.0.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "helmet": "^5.1.0"
   }
 }
